@@ -1,3 +1,9 @@
+Wed Feb  5 18:58:18 1997  Samuel Tardieu  <sam@inf.enst.fr>
+
+	* s-gartcp.adb: Removed every ATC in the TCP module by using 4
+	  characters operation codes which will unblock all the peers if
+	  needed after shutdown synchronization.
+
 Tue Feb  4 14:56:48 1997  Samuel Tardieu  <sam@inf.enst.fr>
 
 	* s-gartcp.adb: Commented out an ATC which makes everything
